<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_menu_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_menu_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_quick_rate"
        android:title="@string/quick_evaluation"
        android:icon="@drawable/ic_star"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_status"
        android:title="@string/change_status"
        android:icon="@drawable/ic_menu_manage"
        app:showAsAction="never" />
</menu>